# aoc2023-cpp

./: .gitignore  CMakeLists.txt  README.md  backup-new.txt  backup-old.txt  config  vcpkg-configuration.json  vcpkg.json
data/: d03ex02.txt
include/: day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp  util.hpp  vec.hpp
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  main.cpp  util.cpp  vec.cpp
